# ml_experimentation_framework

./: Makefile  README.md  requirements.txt  setup.cfg  setup.py
ml_experimentation_framework/: data_access_object.py  feature_generator.py  model.py  run.py  train_model.py
sg_train/data_access_object/: data_access_object.py
sg_train/dev/: model_run.py
sg_train/feature_generator/: feature_generator.py
sg_train/model/: model.py
sg_train/train_job/: model_run.py  tete.py
sg_train/train_model/: train_model.py
