[metadata]
name = sg-train
author = David Oh
author_email = davidoh0905@gmail.com
description = ML Experiment Framework

[versioneer]
VCS = git
style = pep440-post
versionfile_source = ml_experiment_framework/_version.py
; blank to not rewrite version.py in build, to reuse across multiple packages
versionfile_build =
; blank to have no prefix
tag_prefix =
